browser/themes/shared/urlbar-autocomplete.inc.css
/* ... */
.
urlbarView
-
row
:
not
(
[
type
=
tip
]
)
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
no
-
wrap
>
.
urlbarView
-
title
[
overflow
]
.
urlbarView
-
url
[
overflow
]
{
mask
-
image
:
linear
-
gradient
(
to
left
transparent
black
2em
)
;
}
.
urlbarView
-
row
:
not
(
[
type
=
tip
]
)
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
no
-
wrap
>
.
urlbarView
-
title
[
overflow
]
:
not
(
[
isurl
]
)
:
-
moz
-
locale
-
dir
(
rtl
)
{
mask
-
image
:
linear
-
gradient
(
to
right
transparent
black
2em
)
;
}
.
urlbarView
-
title
[
isurl
]
:
-
moz
-
locale
-
dir
(
rtl
)
.
urlbarView
-
url
:
-
moz
-
locale
-
dir
(
rtl
)
{
direction
:
ltr
!
important
;
}
.
urlbarView
:
not
(
.
megabar
)
.
urlbarView
-
row
:
not
(
[
type
=
tip
]
)
:
hover
.
urlbarView
.
megabar
.
urlbarView
-
row
:
not
(
[
type
=
tip
]
)
:
hover
>
.
urlbarView
-
row
-
inner
{
background
:
var
(
-
-
arrowpanel
-
dimmed
)
;
}
.
urlbarView
:
not
(
.
megabar
)
.
urlbarView
-
row
:
not
(
[
type
=
tip
]
)
[
selected
]
.
urlbarView
.
megabar
.
urlbarView
-
row
:
not
(
[
type
=
tip
]
)
[
selected
]
>
.
urlbarView
-
row
-
inner
{
background
:
var
(
-
-
autocomplete
-
popup
-
highlight
-
background
)
;
color
:
var
(
-
-
autocomplete
-
popup
-
highlight
-
color
)
;
fill
-
opacity
:
1
;
}
.
urlbarView
-
type
-
icon
.
urlbarView
-
favicon
{
min
-
width
:
16px
;
height
:
16px
;
background
-
repeat
:
no
-
repeat
;
background
-
size
:
contain
;
-
moz
-
context
-
properties
:
fill
fill
-
opacity
;
}
.
urlbarView
:
not
(
.
megabar
)
.
urlbarView
-
type
-
icon
.
urlbarView
-
favicon
{
margin
-
inline
-
end
:
calc
(
urlbarViewIconMarginEnd
)
;
}
.
urlbarView
.
megabar
.
urlbarView
-
type
-
icon
{
position
:
absolute
;
min
-
width
:
12px
;
height
:
12px
;
margin
-
bottom
:
-
4px
;
margin
-
inline
-
start
:
8px
;
-
moz
-
context
-
properties
:
fill
stroke
;
}
.
urlbarView
-
row
[
type
=
tip
]
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
favicon
{
min
-
width
:
24px
;
height
:
24px
;
margin
-
inline
-
end
:
12px
;
flex
-
basis
:
24px
;
flex
-
grow
:
0
;
flex
-
shrink
:
0
;
}
.
urlbarView
:
not
(
.
megabar
)
.
urlbarView
-
row
[
type
=
tip
]
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
favicon
{
margin
-
inline
-
start
:
calc
(
12px
+
urlbarViewIconMarginEnd
)
;
}
.
urlbarView
-
tip
-
help
{
min
-
width
:
16px
;
height
:
32px
;
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
icons
/
help
.
svg
"
)
;
background
-
size
:
16px
;
background
-
position
:
center
;
background
-
repeat
:
no
-
repeat
;
padding
-
inline
:
8px
;
margin
-
inline
-
start
:
8px
;
-
moz
-
context
-
properties
:
fill
fill
-
opacity
;
}
.
urlbarView
-
tip
-
help
[
selected
]
{
box
-
shadow
:
0
0
0
1px
#
0a84ff
inset
0
0
0
1px
#
0a84ff
0
0
0
4px
rgba
(
10
132
255
0
.
3
)
;
}
.
urlbarView
-
tip
-
help
:
hover
{
background
-
color
:
var
(
-
-
in
-
content
-
button
-
background
-
hover
)
;
}
.
urlbarView
-
tip
-
help
:
hover
:
active
{
background
-
color
:
var
(
-
-
in
-
content
-
button
-
background
-
active
)
;
}
media
(
min
-
resolution
:
2dppx
)
{
.
urlbarView
-
type
-
icon
.
urlbarView
-
favicon
{
transform
:
translateY
(
-
1
.
5px
)
;
}
}
.
urlbarView
.
megabar
.
urlbarView
-
row
[
type
=
bookmark
]
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
no
-
wrap
>
.
urlbarView
-
type
-
icon
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
bookmark
-
12
.
svg
)
;
color
:
#
0060df
;
stroke
:
#
fff
;
}
.
urlbarView
.
megabar
.
urlbarView
-
row
[
type
=
remotetab
]
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
no
-
wrap
>
.
urlbarView
-
type
-
icon
.
urlbarView
.
megabar
:
not
(
[
actionoverride
]
)
.
urlbarView
-
row
[
type
=
switchtab
]
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
no
-
wrap
>
.
urlbarView
-
type
-
icon
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
tab
-
12
.
svg
)
;
color
:
#
008eaf
;
stroke
:
#
fff
;
}
:
root
[
lwt
-
toolbar
-
field
-
brighttext
]
.
urlbarView
.
megabar
.
urlbarView
-
row
[
type
=
bookmark
]
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
no
-
wrap
>
.
urlbarView
-
type
-
icon
{
color
:
#
0a84ff
;
stroke
:
#
38383d
;
}
:
root
[
lwt
-
toolbar
-
field
-
brighttext
]
.
urlbarView
.
megabar
.
urlbarView
-
row
[
type
=
remotetab
]
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
no
-
wrap
>
.
urlbarView
-
type
-
icon
:
root
[
lwt
-
toolbar
-
field
-
brighttext
]
.
urlbarView
.
megabar
:
not
(
[
actionoverride
]
)
.
urlbarView
-
row
[
type
=
switchtab
]
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
no
-
wrap
>
.
urlbarView
-
type
-
icon
{
color
:
#
00c8d7
;
stroke
:
#
38383d
;
}
.
urlbarView
-
row
[
type
=
bookmark
]
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
no
-
wrap
>
.
urlbarView
-
type
-
icon
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
bookmark
.
svg
)
;
}
.
urlbarView
-
row
[
type
=
remotetab
]
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
no
-
wrap
>
.
urlbarView
-
type
-
icon
.
urlbarView
:
not
(
[
actionoverride
]
)
.
urlbarView
-
row
[
type
=
switchtab
]
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
no
-
wrap
>
.
urlbarView
-
type
-
icon
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
tab
.
svg
)
;
}
.
urlbarView
-
row
[
type
=
tip
]
:
not
(
:
last
-
child
)
{
border
-
bottom
:
1px
solid
var
(
-
-
panel
-
separator
-
color
)
;
margin
-
bottom
:
4px
;
}
.
urlbarView
-
row
[
type
=
tip
]
:
not
(
:
first
-
child
)
{
border
-
top
:
1px
solid
var
(
-
-
panel
-
separator
-
color
)
;
margin
-
top
:
4px
;
}
.
urlbarView
-
row
[
type
=
tip
]
>
.
urlbarView
-
row
-
inner
{
display
:
flex
;
align
-
items
:
center
;
min
-
height
:
32px
;
width
:
100
%
;
}
media
screen
and
(
max
-
width
:
800px
)
{
.
urlbarView
:
not
(
.
megabar
)
.
urlbarView
-
row
[
type
=
tip
]
>
.
urlbarView
-
row
-
inner
{
flex
-
wrap
:
wrap
;
}
}
.
urlbarView
-
row
[
type
=
tip
]
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
favicon
.
urlbarView
-
row
[
type
=
tip
]
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
title
.
urlbarView
-
tip
-
button
.
urlbarView
-
tip
-
help
{
margin
-
block
-
end
:
16px
;
}
/* ... */

