Bug 1623980 - Always wrap tip results at narrow window widths. r=dao
Differential Revision: https://phabricator.services.mozilla.com/D68077

UltraBlame original commit: 156272adf90c5f0fafb50747e4f07dd6bd80bf26

--- a/browser/themes/shared/urlbar-autocomplete.inc.css
+++ b/browser/themes/shared/urlbar-autocomplete.inc.css
@@ -1328,6 +1328,42 @@ none
 }
 .
 urlbarView
+.
+megabar
+.
+urlbarView
+-
+results
+[
+wrap
+]
+>
+.
+urlbarView
+-
+row
+[
+type
+=
+tip
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+{
+flex
+-
+wrap
+:
+wrap
+;
+}
+.
+urlbarView
 -
 row
 :
